--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "build": "next build"
   },
   "keywords": [],
   "author": "brettgrigsby",
@@ -15,6 +16,8 @@
     "next": "^9.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "serverless-mysql": "^1.5.4",
+    "sql-template-strings": "^2.2.2",
     "swr": "^0.2.0"
   },
   "devDependencies": {
